@@ -7,6 +7,11 @@
 	}
 }
 
+.subscription_details .button {
+	display: inline-block;
+	margin-bottom: 0.5em;
+}
+
 .subscription-auto-renew-toggle {
 	margin-left: 5px;
 	margin-bottom: 2px;
